[package]
name = "yary"
version = "0.1.0"
authors = ["Bazaah <github@luxolus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "0.4"
bitflags = "1"

[dev-dependencies]
anyhow = "1"
pretty_assertions = "0.7"
