[package]
name = "yary"
version = "0.1.0"
authors = ["Bazaah <github@luxolus.com>"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# PRIVATE! FOR USE IN TEST ONLY!
test_lazy = []
test_buffer = []
test_buffer_large = ["test_buffer"]
test_buffer_medium = ["test_buffer"]
test_buffer_small = ["test_buffer"]

[dependencies]
atoi = "0.4"
bitflags = "1"

[dev-dependencies]
anyhow = "1"
pretty_assertions = "0.7"
cfg-if = "1"
