[package]
name = "yary"
edition = "2018"
authors = ["Bazaah <github@luxolus.com>"]
repository = "https://github.com/dolysis/yary"
description = "Lazy, efficient YAML parsing"
readme = "docs/README.md"

version = "0.1.2"
license = "MPL-2.0"

keywords = ["yaml", "parser", "parsing"]
categories = ["parser-implementations"]

[features]
# PRIVATE! FOR USE IN TEST ONLY!
test_lazy = []
test_buffer = []
test_buffer_large = ["test_buffer"]
test_buffer_medium = ["test_buffer"]
test_buffer_small = ["test_buffer"]

[dependencies]
atoi = "0.4"
bitflags = "1"

[dev-dependencies]
anyhow = "1"
pretty_assertions = "0.7"
cfg-if = "1"
